2009-05-12  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (OnKeyDown): Need to set the handled flag on the
	routed event args in the case where the key event is handled by
	GtkIMContext too.
	(OnKeyUp): Set the handled flag in both cases here.

2009-05-11  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* control.cpp:
	* contentcontrol.cpp: Recommit r133738 as it's not causing the
	  timeouts.

2009-05-09  Andreia Gaita  <avidigal@novell.com>

	* uielement.h: Add GenerateJSBinding annotation to 
	CaptureMouse, ReleaseMouseCapture and
	GetTransformToUIElementWithError (TransformToVisual)

2009-05-09  Chris Toshok  <toshok@ximian.com>

	* eventargs.cpp (KeyEventArgs::IsModifier): reverse the sense of
	this check so we're buildable on SLED10.

2009-05-08  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (layout_word_wrap): If we can't find a suitable place
	to wrap in the first time through the loop, make sure to respect
	the 'force' state the second time through.

	* application.cpp (GetResourceAsPath): Updated.

	* utils.cpp (CanonicalizeFilename): Now takes a 'lower' argument
	to specify whether the filename should be lowercased as it is
	canonicalized.
	(ExtractAll): The 'canon' argument has been renamed to 'lower'
	which more accurately reflects its purpose. Pass this on to
	CanonicalizeFilename().

2009-05-08  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* control.cpp:
	* contentcontrol.cpp: Revert the changes in r133738 until I
	  can figure out why the x86 bot doesn't like them. It's
	  causing the extended controls tests to time out.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* control.cpp:
	* contentcontrol.cpp: If the content property changes, the
	  Template is cleared if it has already been applied.

2009-05-07  Andreia Gaita  <avidigal@novell.com>

	* src/uielement.cpp (GetTransformToUIElementWithError): Don't fail if
	the to_element is the top level element.

2009-05-06  Chris Toshok  <toshok@ximian.com>
